tool box alignment issue is closed ( FIXED )

--- a/page-styles/home.module.css
+++ b/page-styles/home.module.css
@@ -16,6 +16,7 @@
     display: flex;
     align-self: center;
     margin-top: var(--s-layout-gap);
+    justify-content: center;
 
     svg {
       font-size: 6rem;
